--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^5.3.0",
     "dotenv": "^16.3.1",
     "faiss-node": "^0.2.2",
     "langchain": "^0.0.101",
-    "openai": "^3.3.0"
+    "openai": "^3.3.0",
+    "readline": "^1.3.0"
   }
 }
