--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "faiss-node": "^0.2.2",
     "langchain": "^0.0.101",
     "openai": "^3.3.0",
-    "readline": "^1.3.0"
+    "pdf-parse": "^1.1.1",
+    "readline": "^1.3.0",
+    "zod": "^3.21.4"
   }
 }
